--- a/client/src/components/Downlines/Downlines.scss
+++ b/client/src/components/Downlines/Downlines.scss
@@ -49,3 +49,7 @@
             margin-right: 6px !important;
         }
     }
+
+    button.edit-icon, button.trash-icon {
+        border: none;
+    }
